testsuite/tests/rename/should_fail/T16114.stderr

T16114.hs:4:18: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration
